apps/healthchecks/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthchecks
  namespace: healthchecks
  labels:
    app.kubernetes.io/name: healthchecks
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: healthchecks # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthchecks # has to match .spec.selector.matchLabels
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: healthchecks
        image: healthchecks/healthchecks:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: web
        volumeMounts:
        - name: healthchecks-data
          mountPath: /data
      volumes:
        - name: healthchecks-data
          persistentVolumeClaim:
            claimName: healthchecks-data
