apps/healthchecks/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: healthchecks # has to match .spec.template.metadata.labels
  serviceName: "healthchecks"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthchecks # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: healthchecks
        image: healthchecks/healthchecks:latest
        ports:
        - containerPort: 8000
          name: web
        volumeMounts:
        - name: healthchecks-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: healthchecks-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
